--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nfl-props-api",
   "version": "1.0.0",
-  "type": "module",
-  "dependencies": {
-    "axios": "^1.6.0"
+  "engines": {
+    "node": "18.x"
   }
 }
+
