--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
+{
+  "name": "nfl-props-api",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  }
+}
 
